[gd_scene load_steps=15 format=2]

[ext_resource path="res://Autotile.tres" type="TileSet" id=1]
[ext_resource path="res://Gear.tscn" type="PackedScene" id=2]
[ext_resource path="res://drop_leaves.tres" type="TileSet" id=3]
[ext_resource path="res://Decorative.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Test_Scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Help Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://Area2D.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Tutorial/single instance assets/RIght click to cancel.png" type="Texture" id=8]
[ext_resource path="res://Scenes/red monster.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tutorial.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Tutorial/single instance assets/direction_board-02.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3097.69, 989.092 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.1525, 46.747 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 207.251, 201.755 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 524287, 0, 0, 458803, 9, 0, 524292, 4, 0, 524341, 2, 0, 589836, 9, 0, 589847, 9, 0, 655386, 18, 0, 655387, 0, 0, 655417, 18, 0, 720929, 4, 0, 720933, 17, 0, 720943, 4, 0, 852033, 18, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -327632, 5, 0, -262103, 1, 0, -131013, 1, 0, -65515, 5, 0, -65501, 5, 0, 3, 5, 0, 38, 6, 0, 65536, 6, 0, 65541, 0, 0, 65551, 0, 0, 655381, 7, 0 )

[node name="Collectables" parent="." instance=ExtResource( 2 )]
position = Vector2( 1229.41, 422.368 )
scale = Vector2( 0.15, 0.15 )

[node name="Collectables2" parent="." instance=ExtResource( 2 )]
position = Vector2( 3291.8, -46.6926 )
scale = Vector2( 0.15, 0.15 )

[node name="Test_Scene" parent="." instance=ExtResource( 5 )]
position = Vector2( 394.074, 510.825 )

[node name="TileMap3" type="TileMap" parent="."]
z_index = 1
z_as_relative = false
tile_set = ExtResource( 1 )
collision_layer = 512
format = 1
tile_data = PoolIntArray( -524246, 0, 0, -524245, 0, 524292, -524244, 0, 4, -524243, 0, 393218, -524242, 0, 4, -524241, 0, 4, -524240, 0, 524298, -524239, 0, 524292, -524238, 0, 524301, -458711, 0, 0, -458710, 0, 655370, -458709, 0, 131076, -458708, 0, 262156, -458707, 0, 196611, -458706, 0, 196618, -458705, 0, 458763, -458704, 0, 851974, -458703, 0, 262147, -458702, 0, 262149, -393178, 0, 0, -393177, 0, 524298, -393176, 0, 524295, -393175, 0, 851971, -393174, 0, 655367, -393173, 0, 262146, -393172, 0, 131080, -393171, 0, 196619, -393170, 0, 262155, -393169, 0, 589828, -393168, 0, 196617, -393167, 0, 65539, -393166, 0, 786441, -393165, 0, 4, -393164, 0, 524295, -393163, 0, 524295, -393162, 0, 524299, -393161, 0, 5, -327642, 0, 786440, -327641, 0, 262147, -327640, 0, 589828, -327639, 0, 65549, -327638, 0, 65545, -327637, 0, 458754, -327636, 0, 720900, -327635, 0, 851978, -327634, 0, 458755, -327633, 0, 589826, -327632, 0, 10, -327631, 0, 65545, -327630, 0, 720901, -327629, 0, 720903, -327628, 0, 327684, -327627, 0, 720906, -327626, 0, 851973, -327625, 0, 131081, -327624, 0, 1, -327623, 0, 7, -262107, 0, 393222, -262106, 0, 786444, -262105, 0, 720907, -262104, 0, 327682, -262103, 0, 720901, -262102, 0, 327685, -262097, 0, 327686, -262096, 0, 851980, -262095, 0, 327685, -262091, 0, 458758, -262090, 0, 458755, -262089, 0, 458760, -262088, 0, 196621, -262087, 0, 786437, -262086, 0, 5, -262080, 0, 393217, -262079, 0, 3, -262078, 0, 2, -262077, 0, 7, -196582, 0, 0, -196581, 0, 524294, -196580, 0, 524297, -196579, 0, 524293, -196578, 0, 524295, -196577, 0, 393219, -196576, 0, 524299, -196575, 0, 524293, -196574, 0, 3, -196573, 0, 524297, -196572, 0, 393218, -196571, 0, 393226, -196570, 0, 131074, -196569, 0, 131079, -196553, 0, 327680, -196552, 0, 327681, -196551, 0, 589834, -196550, 0, 786441, -196549, 0, 524292, -196548, 0, 4, -196547, 0, 1, -196546, 0, 524298, -196545, 0, 524300, -196544, 0, 131082, -196543, 0, 262145, -196542, 0, 131083, -196541, 0, 13, -196540, 0, 524295, -196539, 0, 7, -131072, 0, 0, -131071, 0, 524299, -131070, 0, 524297, -131069, 0, 524297, -131068, 0, 7, -131053, 0, 393222, -131052, 0, 524294, -131051, 0, 524293, -131050, 0, 524295, -131049, 0, 524298, -131048, 0, 393218, -131047, 0, 524293, -131046, 0, 262154, -131045, 0, 589831, -131044, 0, 65547, -131043, 0, 131085, -131042, 0, 65537, -131041, 0, 9, -131040, 0, 262146, -131039, 0, 393224, -131038, 0, 65544, -131037, 0, 393229, -131036, 0, 262156, -131035, 0, 65547, -131034, 0, 196616, -131033, 0, 655369, -131032, 0, 393220, -131015, 0, 458753, -131014, 0, 327683, -131013, 0, 851978, -131012, 0, 851978, -131011, 0, 458755, -131010, 0, 851978, -131009, 0, 327681, -131008, 0, 851979, -131007, 0, 720902, -131006, 0, 458754, -131005, 0, 65546, -131004, 0, 196617, -131003, 0, 589827, -5, 0, 393216, -4, 0, 0, -3, 0, 393219, -2, 0, 393219, -1, 0, 4, -65536, 0, 655362, -65535, 0, 196611, -65534, 0, 851974, -65533, 0, 851973, -65532, 0, 851968, -65531, 0, 393219, -65530, 0, 524297, -65529, 0, 524292, -65528, 0, 524294, -65527, 0, 524293, -65526, 0, 524295, -65525, 0, 2, -65524, 0, 393218, -65523, 0, 524297, -65522, 0, 524299, -65521, 0, 1, -65520, 0, 1, -65519, 0, 524300, -65518, 0, 524293, -65517, 0, 851969, -65516, 0, 327688, -65515, 0, 458763, -65514, 0, 786432, -65513, 0, 458755, -65512, 0, 327684, -65511, 0, 327682, -65510, 0, 851980, -65509, 0, 327684, -65508, 0, 851980, -65507, 0, 327683, -65506, 0, 720900, -65505, 0, 327684, -65504, 0, 327683, -65503, 0, 327681, -65502, 0, 851978, -65501, 0, 720902, -65500, 0, 458755, -65499, 0, 65546, -65498, 0, 8, -65497, 0, 196619, -65496, 0, 655373, -65495, 0, 393216, -65469, 0, 65542, -65468, 0, 524290, -65467, 0, 655361, -65466, 0, 393219, -65465, 0, 393220, 65532, 0, 589832, 65533, 0, 589831, 65534, 0, 196612, 65535, 0, 262148, 0, 0, 131076, 1, 0, 65544, 2, 0, 327693, 3, 0, 851977, 4, 0, 851972, 5, 0, 262145, 6, 0, 65539, 7, 0, 196611, 8, 0, 65538, 9, 0, 786439, 10, 0, 327692, 11, 0, 65537, 12, 0, 196618, 13, 0, 196610, 14, 0, 65547, 15, 0, 196617, 16, 0, 65549, 17, 0, 10, 18, 0, 589831, 19, 0, 851973, 20, 0, 458765, 21, 0, 851980, 22, 0, 327687, 37, 0, 458753, 38, 0, 327684, 39, 0, 720902, 40, 0, 327685, 67, 0, 327680, 68, 0, 851978, 69, 0, 327682, 70, 0, 327690, 71, 0, 262153, 72, 0, 393220, 131067, 0, 393217, 131068, 0, 262152, 131069, 0, 65539, 131070, 0, 589835, 131071, 0, 327683, 65536, 0, 327684, 65537, 0, 720901, 65538, 0, 458756, 65540, 0, 851976, 65541, 0, 720908, 65542, 0, 720905, 65543, 0, 327683, 65544, 0, 458754, 65545, 0, 327681, 65546, 0, 851980, 65547, 0, 458755, 65548, 0, 720906, 65549, 0, 655364, 65550, 0, 327688, 65551, 0, 393224, 65552, 0, 196621, 65553, 0, 589829, 65554, 0, 720902, 65555, 0, 327683, 65556, 0, 327687, 65606, 0, 655368, 65607, 0, 11, 65608, 0, 655371, 65609, 0, 393220, 196603, 0, 131072, 196604, 0, 131074, 196605, 0, 327689, 196606, 0, 327685, 131077, 0, 458758, 131078, 0, 327687, 131084, 0, 458753, 131085, 0, 851979, 131086, 0, 458754, 131087, 0, 720903, 131088, 0, 458755, 131089, 0, 458756, 131142, 0, 851976, 131143, 0, 327683, 131144, 0, 786435, 131145, 0, 262153, 131146, 0, 524292, 131147, 0, 4, 131148, 0, 524294, 131149, 0, 393223, 262139, 0, 65542, 262140, 0, 720897, 262141, 0, 655363, 196680, 0, 327686, 196681, 0, 851980, 196682, 0, 327682, 196683, 0, 851977, 196684, 0, 851977, 196685, 0, 458759, 327675, 0, 327686, 327676, 0, 786435, 327677, 0, 589837, 393212, 0, 720896, 393213, 0, 262157, 393214, 0, 5, 458748, 0, 131072, 458749, 0, 655364, 458750, 0, 262151, 524284, 0, 196608, 524285, 0, 8, 524286, 0, 65543, 589820, 0, 65536, 589821, 0, 262145, 589822, 0, 393225, 589823, 0, 524294, 524288, 0, 524295, 524289, 0, 393223, 655354, 0, 393216, 655355, 0, 393216, 655356, 0, 327680, 655357, 0, 720902, 655358, 0, 458762, 655359, 0, 131073, 589824, 0, 131083, 589825, 0, 13, 589826, 0, 4, 589827, 0, 524300, 589828, 0, 4, 589829, 0, 2, 589830, 0, 393218, 589831, 0, 524295, 589832, 0, 524301, 589867, 0, 393222, 589868, 0, 1, 589869, 0, 393223, 720894, 0, 458753, 720895, 0, 327682, 655360, 0, 851980, 655361, 0, 851977, 655362, 0, 851979, 655363, 0, 851980, 655364, 0, 851980, 655365, 0, 720902, 655366, 0, 589836, 655367, 0, 393229, 655368, 0, 13, 655369, 0, 2, 655370, 0, 393219, 655371, 0, 4, 655372, 0, 524297, 655373, 0, 524293, 655374, 0, 5, 655382, 0, 0, 655383, 0, 3, 655384, 0, 524299, 655385, 0, 393223, 655403, 0, 65542, 655404, 0, 262156, 655405, 0, 65543, 655418, 0, 524296, 655419, 0, 524301, 786430, 0, 393216, 720902, 0, 458753, 720903, 0, 589826, 720904, 0, 327689, 720905, 0, 720902, 720906, 0, 458754, 720907, 0, 327682, 720908, 0, 720900, 720909, 0, 458754, 720910, 0, 327687, 720918, 0, 327680, 720919, 0, 458764, 720920, 0, 262148, 720921, 0, 262153, 720922, 0, 524300, 720923, 0, 524294, 720924, 0, 7, 720939, 0, 262144, 720940, 0, 196609, 720941, 0, 655361, 720942, 0, 3, 720943, 0, 524301, 720948, 0, 0, 720949, 0, 524298, 720950, 0, 524293, 720951, 0, 1, 720952, 0, 1, 720953, 0, 4, 720954, 0, 786444, 720955, 0, 786437, 720956, 0, 524297, 720957, 0, 1, 720958, 0, 524297, 720959, 0, 3, 720960, 0, 524295, 720961, 0, 524300, 720962, 0, 524293, 720963, 0, 4, 720964, 0, 524294, 720965, 0, 3, 720966, 0, 524293, 720967, 0, 393219, 720968, 0, 1, 720969, 0, 524295, 720970, 0, 524299, 720971, 0, 3, 720972, 0, 393223, 720973, 0, 393216, 786439, 0, 458758, 786440, 0, 458759, 786455, 0, 458758, 786456, 0, 458755, 786457, 0, 589826, 786458, 0, 196617, 786459, 0, 65537, 786460, 0, 262153, 786461, 0, 524297, 786462, 0, 524292, 786463, 0, 524300, 786464, 0, 393219, 786465, 0, 524298, 786466, 0, 1, 786467, 0, 1, 786468, 0, 1, 786469, 0, 393218, 786470, 0, 524298, 786471, 0, 524292, 786472, 0, 524293, 786473, 0, 524294, 786474, 0, 524297, 786475, 0, 262154, 786476, 0, 655364, 786477, 0, 9, 786478, 0, 131083, 786479, 0, 393227, 786480, 0, 524293, 786481, 0, 393219, 786482, 0, 524300, 786483, 0, 524292, 786484, 0, 12, 786485, 0, 655367, 786486, 0, 458763, 786487, 0, 851973, 786488, 0, 131076, 786489, 0, 786436, 786490, 0, 131076, 786491, 0, 65539, 786492, 0, 65540, 786493, 0, 196619, 786494, 0, 262146, 786495, 0, 65545, 786496, 0, 851980, 786497, 0, 327684, 786498, 0, 851980, 786499, 0, 720903, 786500, 0, 720900, 786501, 0, 589834, 786502, 0, 327693, 786503, 0, 720902, 786504, 0, 458755, 786505, 0, 458764, 786506, 0, 131080, 786507, 0, 327689, 786508, 0, 458756, 851993, 0, 851976, 851994, 0, 327683, 851995, 0, 327682, 851996, 0, 720902, 851997, 0, 327684, 851998, 0, 720901, 851999, 0, 458755, 852000, 0, 458754, 852001, 0, 327681, 852002, 0, 851979, 852003, 0, 851978, 852004, 0, 327682, 852005, 0, 720903, 852006, 0, 720900, 852007, 0, 720901, 852008, 0, 851977, 852009, 0, 327682, 852010, 0, 720902, 852011, 0, 720903, 852012, 0, 720900, 852013, 0, 458755, 852014, 0, 720903, 852015, 0, 851978, 852016, 0, 327684, 852017, 0, 458755, 852018, 0, 851977, 852019, 0, 720902, 852020, 0, 327681, 852021, 0, 458754, 852022, 0, 720902, 852023, 0, 458754, 852024, 0, 851978, 852025, 0, 851977, 852026, 0, 458755, 852027, 0, 458755, 852028, 0, 327681, 852029, 0, 196620, 852030, 0, 65538, 852031, 0, 589827, 852037, 0, 327686, 852038, 0, 327685, 852041, 0, 196614, 852042, 0, 9, 852043, 0, 262149, 917565, 0, 131072, 917566, 0, 196611, 917567, 0, 262153, 917568, 0, 4, 917569, 0, 4, 917570, 0, 524294, 917571, 0, 524294, 917572, 0, 393220, 917574, 0, 393216, 917576, 0, 0, 917577, 0, 655372, 917578, 0, 65538, 917579, 0, 851970, 917580, 0, 5, 983101, 0, 851976, 983102, 0, 589836, 983103, 0, 327688, 983104, 0, 393228, 983105, 0, 589828, 983106, 0, 196617, 983107, 0, 589828, 983108, 0, 655365, 983109, 0, 524294, 983110, 0, 524293, 983111, 0, 524293, 983112, 0, 786442, 983113, 0, 851975, 983114, 0, 851979, 983115, 0, 458762, 983116, 0, 262157, 983117, 0, 393223, 1048638, 0, 458753, 1048639, 0, 327681, 1048640, 0, 327683, 1048641, 0, 851977, 1048642, 0, 327682, 1048643, 0, 720903, 1048644, 0, 327683, 1048645, 0, 851978, 1048646, 0, 851977, 1048647, 0, 851977, 1048648, 0, 327681, 1048649, 0, 327687, 1048651, 0, 327686, 1048652, 0, 327684, 1048653, 0, 458756, 1114177, 0, 393216 )

[node name="Help Board" parent="." instance=ExtResource( 6 )]
position = Vector2( 657.062, 602.419 )

[node name="Help Board2" parent="." instance=ExtResource( 6 )]
position = Vector2( 2283.41, 722.775 )
teach = 1

[node name="Help Board3" parent="." instance=ExtResource( 6 )]
position = Vector2( 3205.03, 726.338 )
teach = 2

[node name="playArea" type="Area2D" parent="."]
position = Vector2( -416, 1072 )
scale = Vector2( 1.40001, 0.276929 )
collision_layer = 32768
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="playArea"]
position = Vector2( 2217.99, 422.046 )
shape = SubResource( 1 )

[node name="RedMonster" parent="." instance=ExtResource( 9 )]
position = Vector2( 3984.22, 343.169 )
final_point = Vector2( 120, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 16384
script = ExtResource( 7 )

[node name="RIght click to cancel" type="Sprite" parent="Area2D"]
position = Vector2( 1122.21, 281.8 )
scale = Vector2( 0.61057, 0.55853 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 858.848, 603.502 )
shape = SubResource( 2 )

[node name="direction_board-02" type="Sprite" parent="."]
position = Vector2( 4641.78, 539.907 )
texture = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="direction_board-02"]
collision_layer = 32768
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="direction_board-02/Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="playArea" to="." method="_on_playArea_body_entered"]
[connection signal="body_exited" from="playArea" to="." method="_on_playArea_body_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="direction_board-02/Area2D" to="." method="_on_Area2D_body_entered"]
